fixed overlapping issue with containers on display

--- a/format.css
+++ b/format.css
@@ -14,6 +14,7 @@ header {
   left: 0;
   width: 100%;
   background-color: #242424;
+  z-index: 1000; /*priority over others*/
 }
 
 li {
@@ -237,6 +238,8 @@ li {
   height: 475px;
   margin: 10px;
   border-radius: 25px;
+  z-index: 1;
+  position: relative;
 }
 
 .card-img1 {
